--- a/client/src/components/stockCard/style.css
+++ b/client/src/components/stockCard/style.css
@@ -1,3 +1,11 @@
 .stock-card {
-	border: 1px solid black;
+	background: #1d2937;
+	height: 500px;
+	width: 450px;
+	border-radius: 20px;
+	padding: 1.75rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.4);
 }
