--- a/client/src/components/stockCard/style.css
+++ b/client/src/components/stockCard/style.css
@@ -9,3 +9,19 @@
 	justify-content: center;
 	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.4);
 }
+
+@media (max-width: 550px) {
+	:root {
+		font-size: 14px;
+	}
+	.stock-card {
+		height: 50vh;
+		width: 90%;
+	}
+}
+
+@media (max-width: 370px) {
+	:root {
+		font-size: 12px;
+	}
+}
